
[workspace]
members = [
    "packages/dioxus",
    "packages/core",
    "packages/core-macro",
    "packages/router",
    "packages/html",
    "packages/hooks",
    "packages/web",
    "packages/ssr",
    "packages/desktop",
    "packages/mobile",
    "packages/interpreter",
    "packages/fermi",
    "packages/tui",
    "packages/liveview",
    "packages/autofmt",
    "packages/rsx",
    "packages/rsx_interpreter",
    "packages/native-core",
    "packages/native-core-macro",
    "packages/rsx-prelude",
    "docs/guide",
]
